docs(perf): restitution finale du banc — relevés O5/O3 + procédures (#29)
29d : consigne les chiffres mesurés sur machine de référence (≈ poste IUT) au
lieu des placeholders.
- O5 (BancMesure) : sélection ~25 ms < 100 ms, tri/filtre ~18 ms < 200 ms (index #28).
- O3 (BancImport) : tableau à 3 tailles (100/500/1000 fichiers) — temps linéaire,
  copie I/O dominante, transfo #12 ~25-30 %, persistance négligeable, mémoire
  bornée. Ordre de grandeur : nuit réelle ~1572 fichiers → ~6-8 s, crête ~600-700 Mo.
- Procédures semi-manuelles : freeze IHM > 200 ms (sonde AnimationTimer sur le pulse
  JavaFX) et mémoire stabilisée (enchaînement d'imports / -Xlog:gc).
- Bilan : O5 (#26) et O3 (#27) tenues.